<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical">

    <!-- Posición -->
    <TextView
        android:id="@+id/tvPosicion"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/ranking_position"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center" />

    <!-- Nombre usuario -->
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/username_sample"
        android:textSize="16sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <!-- Puntos -->
    <TextView
        android:id="@+id/tvPuntos"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/user_points"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="end" />

</LinearLayout>
