<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde"
    android:backgroundTint="#73C149"
    android:foregroundTint="#77C549">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="268dp"
        android:layout_height="74dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#3E4044"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="373dp"
        android:layout_height="440dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="13dp"
        android:background="@color/grisoscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="333dp"
            android:layout_height="41dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#77C549"
            android:ems="10"
            android:hint="@string/intrcorreo"
            android:inputType="text"
            android:textColor="#77C549"
            android:textColorHint="#72C049"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="337dp"
            android:layout_height="46dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="11dp"
            android:backgroundTint="#72C049"
            android:ems="10"
            android:foregroundTint="#72C049"
            android:hint="@string/repcorreo"
            android:inputType="text"
            android:textColor="#72C049"
            android:textColorHint="#72C049"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="306dp"
            android:layout_height="77dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#72C049"
            android:text="@string/texto"
            android:textColor="#72C049"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnaceptar" />

        <Button
            android:id="@+id/volverlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#72C049"
            android:text="@string/btnvolver"
            android:textColor="#3E4044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/btnaceptar"
            android:layout_width="105dp"
            android:layout_height="52dp"
            android:layout_marginStart="138dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="133dp"
            android:layout_marginBottom="28dp"
            android:backgroundTint="#72C049"
            android:text="@string/btnaceptar"
            android:textColor="#3E4044"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>