<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaJugadoresFirebaseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBusqueda"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/verde"
        android:title="@string/buscar_jugadores_title"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etBuscarJugador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/buscar_jugador_hint"
        android:padding="12dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@id/toolbarBusqueda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSinResultados"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sin_resultados_text"
        android:textAlignment="center"
        android:visibility="gone"
        android:textSize="16sp"
        android:textColor="#FF0000"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/etBuscarJugador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewJugadores"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/etBuscarJugador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
