<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#78C649"
    tools:context=".MainActivity">

    <!-- Contenedor principal para centrar los elementos -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/etusuario"
            android:inputType="text"
            android:textColor="#3E4044"
            android:textColorHint="#3E4044"
            tools:text="Usuario o dirección de correo" />

        <!-- Campo de texto para la contraseña -->
        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/etcontraseña"
            android:inputType="textPassword"
            android:textColor="#3E4044"
            android:textColorHint="#3E4044" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3E4044"
            android:text="@string/btniniciosesion"
            android:textColor="#77C549" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="223dp"
        android:layout_height="230dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_ada" />

    <TextView
        android:id="@+id/textolvcontra"
        android:layout_width="169dp"
        android:layout_height="22dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="117dp"
        android:clickable="true"
        android:linksClickable="true"
        android:text="@string/btnolvidarcontraseña"
        android:textColor="#404040"
        android:textColorLink="#3E4044"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="428dp"
        android:layout_height="24dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="168dp"
        android:text="-------------------------------------------------- Ó ---------------------------------------------------"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textolvcontra" />

    <Button
        android:id="@+id/btnregistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="144dp"
        android:backgroundTint="#3E4044"
        android:text="Registrarse"
        android:textColor="#77C549"
        android:textColorLink="#77C549"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>